[package]
name = "hdwd"
version = "0.1.0"
authors = ["salpalvv <gth701m@gmail.com>"]

[dependencies]
rocket = "0.2"
rocket_codegen = "0.2"
rocket_contrib = "0.2"
chrono = "0.3"
diesel = { version = "0.12", features = ["sqlite"] }
diesel_codegen = { version = "0.12", features = ["sqlite"] }
dotenv = "0.8.0"
r2d2 = "0.7"
r2d2-diesel = "0.7"
serde_json = "0.9"
